--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.13.4",
+    "express-session": "^1.15.6",
     "mongodb": "^3.0.0"
   },
   "scripts": {
